@@ -5,7 +5,7 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# PE 2017.3     5.3      2.4.4  2018-12-31
+# PE 2017.3     5.3      2.4.5  2018-12-31
 # SIMP 6.3      5.5      2.4.5  TBD***
 # PE 2018.1     5.5      2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
@@ -35,15 +35,13 @@ addons:
 
 before_install:
   - rm -f Gemfile.lock
+  - for x in ${HOME}/.rvm/gems/*; do gem uninstall -I -x -i "${x}" -v '>= 1.17' bundler || true; gem uninstall -I -x -i "${x}@global" -v '>= 1.17' bundler || true; done
   - gem install -v '~> 1.17' bundler
 
 global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
@@ -81,7 +79,7 @@ jobs:
         - bundle exec rake spec
 
     - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
       env: PUPPET_VERSION="~> 6.0"
       script:
@@ -97,7 +95,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: "wf+hAdGjQn+aXF5S0GrJ0ZVR/haigbILHzAwkt1XfgozYgRqgp8U3lOYRScFDM8xsEvSwQ400amMSQY7rDwQpIHZQuyKAPouDkPN/+NvcJB1FBqclp20llCx8/l5NBuJNHieAYvslOirq6QDeHv9JsLbd3PXHoyARpgQCzbC8qDAgYEsOlESHPC76rJnMc+rfRvdy7wRkA2nnk4OcngfuVnElYsdT5gY3sHb+1FqplugJXrlRqHpi6hSbYshx2ZV44Vg+2VB6GhpGLFZ0RSg8mXM82mibOQkrzOxDP5IMNEGo46l8z56LbmyOLVi3Z/yRhjehRJFBsyC+GRnlA+9Ip7nWBCfaLUbrMsddEEPdWdRsX3ZuTK56iIdOEEO2NwRQlCTUiDnEWu2vGYB7V1W90Fp8DpKPNZtjA/QTlcii6iIO6tAplFJmbmw5SU8VnkZQJUVghhuNwykR/e0uwnuQa0eJdK/n1k0NVVoB/n4ADaMmTJKcIO299YLQmWhOdCZyrPSxPNdALR1nCA8L6ECs1u58u1DDmC8zF+d6ZFvYx1B5MfF8+ekXpCfPqgDI9SfVp5ajhSxLC5gx0UMaXjEk8iw43sodYKmpwa3qnpOiIYnrvxxiRLHMDSG1T1lQoG1v6uNvneQ3ZSIL5mGOzO4QUcjX6iUiOOhsum70UQbMrI="
+            secure: "k9Nx0/6V6FEOzYPhsn8410ZGA7mcYc/H1vR+YH02yDhKLRILI1XWZ8vjXobvY+1bdnhbUj8O8gUjaZv7PIztaRzRqu2FeTJb9R3fFhXpt2Uv9ZY+5Hq+LoOpEj8LaXCtVHlss8EVxU7dXg96NxrMenUeB5WPDrJdQu+lEkcvmNNysCLljmLda9MlGTBlsdpugMsM6b+k6LIF64hovup4ewQSoHq3RxciHN3rjn/K8e7oY3tclD+rISUZOTeLr+fjS3LhAW2R5u+0FjuzIE/Gcq/szuQC5N2CAegVt8H6q7DRjkklVI0L6FXCoAd0t6CHwZ+PlftphAqh4FjYrtTOaUirPpsKWMLfHSWANXneVZ8uhqDiMTNLMYnOewZrTyyLqIh/d7xbEcv6uQuCdbSoWmupZfkXAKvoecMA3+3y4dVJmf/olqlz4KSE7UMKettG/RogtSIZ6YDhfuWiI6P29NZDjzhKHLmmPxl4upaiEVt6XoxDeh2fqKpe3ggURIcG7xv7CbzCmhYz4EZ4a4rd6ieUvjrpGLshke0O3PZBHYXA84fnWiUb5tQCGAX0pE0sJmGqnufHeMzBOi7JDBp8XLZAjEFcIjjn+3Tb9whZh+gw5RVUH768fp2gH+STJKNGfz9ClXyKJkEFb2ZmYboKZ7WptnFMM6TmcC2O4RYT4Yo="
           skip_cleanup: true
           on:
             tags: true
@@ -105,7 +103,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-            secure: "gkSEKWsoqcoIQqmfeKWj4J4rquy8ZdYB2NXqIX5zivSm5vGxeVCym3+wFNJJIykxCwvHKj8my9nz2a3wxYSTNWdOA5QYDKk77obTdE1MvlNWv8EixLlqVpI6fi0vm/BJcOmW5ru9ldSI+PVa26EJZZ5u3iShb1aJYaT3O+gaqwSgME6dEBb+n9btNdM2IjVuZPbGvVLL1iXoLFcBs127/Pu2nHYDIPqGBbaSnyMV2zMplFKz7ZWQr3yGKYOkAegfMg/WsFbaU1Q/9BNIqw4gqjtNjFArwvfZ9qxF9e/bHSRkGLGoABWW8+T9Trwt1nEoY92DFtuxk5j5JRmPPTceAFE4sLreWi3ZqOpKs9A/JLyWnzpEx7OdXW4BckqgPuXNPWSAfk11+1RkV5s/6d875ms856MZqI7U6PGY0LlQW8OiiGn+VBvRxvU2qHBKUzENxlK/IVTSX7rskHaiozXS9QyVwofc8kzchaGLXwi5gprtNpWOBTzrezyGugLVviIaJ9seX/YdiG62GgULFveD3BOUbu0JQS/2VbUjTetWeGWYBTYRQP1m+UiVkOr7x/Q3qHPmdwAglp/a08NVFL2H+LHqUD+SESutVDfbL5xHffbu5utYGgHA0TX+GhxIMOcSpVoByesv7K36CmdFHk8TvKwVmoWxPS0lVf/6am+oKAU="
+            secure: "bweemJAHZQN8lEEDRqR5JPyyd4+5rgzqWvKfUHsynEtzuwlE2xesQ7MUpqS9O+qOQaltFyjLzjqVvaDhAivxL8hzJPTChBqT26fCCSw5eE36bpZPlXvru8BaThjjEDvgGqZAjSDKOuS8rLwgwRMD6ZiBVHZ7XEQADAEtWtBsV9LsoUJYU6noTTxkGG4MHya5I6erW9GUbyJ90UIvtMSyjQ5pLCirCOgsNUD/RF0wNl8jukAuQbQRRT+LGBNENS3PnvLCk52AeizUpR15bMcrgPv0338WnRfGufz+itRlx4ZU0899COFpuPSBmuLP4WQp1mTRVGa6cMFWzA19yhjzhOX68Pyv/hBgFzlsdsqjLK7XvE9Ux2KravAnCe833K5b6i6kcok5+KDrdjQxvyh0TGBIA+75sLx8VViKTjXqxf2OEL5W1VEgmhxQPCkFh38oBvE1rkcFLexoFVyAU+Jblu6yPrw3fuUUMLGalEkYjyHLqUYU7x+Kd6NotDrQ7OxfVWbfrBwpDC9xn/wVKASs3kkcHzYfc6y1xzpJ5Xlod2nTa+FXo7q2yECUgnjGVu680t/wCDydOY4GtsaDRRbgi5qrIm5I7Ie42sA2fQOmkix/XFIcm/EUsdTx71OllfdWOVteoa+4JiWSVgskm0PG9JEHiVwtScxr26jzVO6UaII="
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
